# DeepCamera

./: .ftpconfig  .gitignore  .travis.yml  CNAME  Contributions.md  FUNDING.yml  LICENSE  README.md  download_mxmodel.sh  download_stubmodel.sh  embedding_docker.sh  run-on-arm64v8.sh  run-on-linux.sh  run-on-mac.sh  run-on-nano.sh  run-on-rpi.sh  setup.sh  setup_arm32.sh  setup_human_arm32.sh  start-cloud.sh  start_service.sh  start_service_arm32.sh  start_service_human.sh  start_service_human_arm32.sh  stop_all.sh
docker/: .env  .gitignore  aws.env  brokerConfig.js  build_x86.sh  cluster.env  docker-compose-apiserver.yml  docker-compose-arm64v8.yml  docker-compose-nano-r32.6.1.yml  docker-compose-nano.yml  docker-compose-pi.yml  docker-compose-prebuilt.yml  docker-compose-rpi.yml  docker-compose-x86-debug.yml  docker-compose-x86.yml  docker-compose.yml  env_statement.md  production_1.env  run-deepeye-raspberrypi.sh  run-deepeye-x86.sh  run-on-linux.sh  run-on-mac.sh  run-on-rpi.sh  servers.env
docs/: Binary_FS.md  DeepCamera_Features.md  DeepCamera_introduction.md  FallDetection_with_shinobi.md  Privacy.md  RUN_ON_PI_V2.md  RunOnRK3288.md  RunOnRaspberryPi.md  Run_On_Android_aarch64.md  Run_On_Macbook.md  Run_Source_Android_aarch64.md  Runtime32.md  Runtime_AARCH64.md  Supported_Devices.md  Yolo_Parking.md  configure_on_mobile.md  connect_to_ha.md  deploy_with_your_own_server.md  develop_on_pc.md  development_armv7.md  home_assistant_integration.md  how_to_run_intruder_detection.md  old_documents_in_readme.md  (+6 more)
verify/gpu/opengl-test/: CMakeLists.txt  main.cpp
(+560 files in other folders)
